Stop page from overlapping with footer

--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,46 @@
 :root {
     --my-gray: rgba(0, 0, 0, 0.75);
+    --foot-height: 110px;
+    --foot-height-neg: -110px; /* because can't make variable negative */
 }
 
-body { 
+* {
     margin: 0;
+}
+
+html, body {
+    height: 100vh;
+}
+
+.page-wrap {
+    min-height: 100%;
+    margin-bottom: var(--foot-height-neg); 
+}
+
+.page-wrap:after {
+    content: "";
+    display: block;
+}
+
+.site-footer, .page-wrap:after {
+    height: var(--foot-height); 
+}
+
+.site-footer {
+    border-top: 1px solid lightgray;
+    background: #EEE;
+}
+
+body {
     padding: 0;
-    font: 400 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;    
+    margin: 0;
+    font: 400 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 header {
     border-top: 5px solid var(--my-gray);
     border-bottom: 1px solid lightgray;
+    margin-bottom: 1em;
     min-height: 56px;
     position: relative;
 }
@@ -18,6 +48,7 @@ header {
 h1 {
     font-weight: 400;
 }
+
 a {
     color: steelblue;
     text-decoration: none;
@@ -36,7 +67,9 @@ a:visited {
     font-size: 42px;
     letter-spacing: -1px;
     line-height: 1;
+    margin: 25px 0;
 }
+
 .site-title, .site-title a {
     font-size: 26px;
     font-weight: 350;
@@ -57,41 +90,31 @@ nav a{
     float: right;
     color: var(--my-gray);
 }
+
 .content {
     max-width: 750px;
-    width: auto;
+    width: 100%;
     margin: 0 auto;
-}
-header .content {
-    font-size: 20px;
+    padding-bottom: 1em;
 }
 
-footer {
-    border-top: 1px solid lightgray;
-    min-height: 56px;
-    position: fixed;
-    bottom: 40px;
-    width: 100%;
-}
 footer ul {
     text-align: center;
 }
 footer li {
-    /* border-radius: 100%; */
-    /* border: 2px solid white; */
-    /* color: white; */
     margin: 2%;
     display: inline-block;
     list-style: none;
     width: 10%;
-    /* height: 65px; */
+}
+
+footer a {
+    color: var(--my-gray);
 }
 footer a:visited {
     color: var(--my-gray);
 }
-footer a {
-    color: var(--my-gray);
-}
+
 #copyright {
     font-size: 13px;
     color: var(--my-gray);
